<resources>
    <string name="app_name">MapApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="buttonGo">GO</string>
    <string name="buttonAdd">Add new group</string>
    <string-array name="names">
        <item>Иван</item>
        <item>Марья</item>
        <item>Петр</item>
        <item>Антон</item>
        <item>Даша</item>
        <item>Борис</item>
        <item>Костя</item>
        <item>Игорь</item>
        <item>Анна</item>
        <item>Денис</item>
        <item>Вадим</item>
        <item>Ольга</item>
        <item>Сергей</item>
    </string-array>
    <string name="title_activity_add_tag">AddTag</string>
    <string name="buttonOK">OK</string>
    <string name="buttonCancel">Cancel</string>
    <string name="name">name</string>
    <string name="comment">comment</string>
    <string name="tagicon">icon</string>
    <string name="iconsearch">choose...</string>

</resources>
