<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">



    //имя
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/texttagName"
            android:text="@string/name"
            />
        <EditText
            android:id="@+id/tagNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    //коммент
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/texttagComment"
            android:text="@string/comment"/>

        <EditText
            android:id="@+id/tagCommentField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/texttagIcon"
            android:text="@string/tagicon"/>

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/buttonTagIcon"
           android:text="@string/iconsearch"/>

    </LinearLayout>


    //ок и cancel
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/okTagGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonOK"/>

    <Button
        android:id="@+id/cancelTagGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCancel"/>
    </LinearLayout>


</LinearLayout>